CHANGES IN VERSION 2017.1 (First version working with SEER data of 2017)
------------------------

Notes

    o radiatn field no longer with regular SEER release, so it has been removed from the pickFields default
    list and mkSEER no longer calls mapTrts unless the field is there (if you're using an old SEER release or 
    requested and got a version of the data that includes radiation and chemotherapy information).     


CHANGES IN VERSION 2016.3 (Third version working with SEER data of 2016)
------------------------

NEW FEATURES

    o riskVsAge is a new function that yields risks vs attained age after a first cancer     

    o esd (event since diagnosis) is an msd wrapper. It uses SEER incidences instead of mortalities 
    to yield RR time courses for user defined second cancer data.  
    


CHANGES IN VERSION 2016.2 (Second version working with SEER data of 2016)
------------------------

NEW FEATURES

    o msd now takes a ybrks vector for showing calendar year trends     

Notes
    o mkExcel2 is now mkExcelCsd, and mkExcel is now mkExcelTsd, to emphasize that their inputs are the
    outputs of csd and tsd, respectively. mkExcelTsd and tsd are internal.
    



CHANGES IN VERSION 2016.1 (First version working with the new SEER data release of 2016)
------------------------

NEW FEATURES

    o AML/MDS (leukemia 2016), CLL (leukemia research 2016), and CML (AAPSJ 2016) scripts were added to doc/papers      


Notes
    o Many fields were deleted or renamed in the SAS file of the 2016 SEER data release. Names used in my scipts 
      that changed were reverted to originals in getFields() to avoid downstream problems. Numprims is no longer  
      there, so use seqnum instead. A few fields were also added to the new SEER data release.


CHANGES IN VERSION 2015.3 (Third version working with the SEER release of 2015)
------------------------

NEW FEATURES
